[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/scenes/game/CharacterGenerator.gd" type="Script" id=1]
[ext_resource path="res://assets/materials/BlackCharacter.material" type="Material" id=2]
[ext_resource path="res://assets/materials/BlondeCharacter.material" type="Material" id=3]
[ext_resource path="res://assets/materials/BrownCharacter2.material" type="Material" id=4]
[ext_resource path="res://assets/materials/OrangeCharacter3.material" type="Material" id=5]
[ext_resource path="res://assets/creatures/character/accessories/head/hair_bob.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/creatures/character/accessories/head/hair_pig.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/creatures/character/accessories/head/hair_pony.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/creatures/character/accessories/head/hair_tail.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/creatures/character/accessories/head/beard.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/creatures/character/accessories/head/glasses.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/creatures/character/accessories/head/glasses_fancy.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/creatures/character/faces/face_01.png" type="Texture" id=13]
[ext_resource path="res://assets/creatures/character/faces/face_02.png" type="Texture" id=14]
[ext_resource path="res://assets/creatures/character/faces/face_03.png" type="Texture" id=15]
[ext_resource path="res://assets/creatures/character/faces/face_04.png" type="Texture" id=16]
[ext_resource path="res://assets/creatures/character/faces/face_05.png" type="Texture" id=17]
[ext_resource path="res://assets/creatures/character/faces/face_06.png" type="Texture" id=18]
[ext_resource path="res://assets/creatures/character/faces/face_07.png" type="Texture" id=19]
[ext_resource path="res://assets/creatures/character/faces/face_08.png" type="Texture" id=20]
[ext_resource path="res://assets/creatures/character/faces/face_09.png" type="Texture" id=21]
[ext_resource path="res://assets/creatures/character/faces/face_11.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/trinity_theme.tres" type="Theme" id=23]
[ext_resource path="res://assets/ui/icons/male.png" type="Texture" id=24]
[ext_resource path="res://assets/ui/icons/female.png" type="Texture" id=25]
[ext_resource path="res://assets/ui/rpg/png/arrowBrown_left.png" type="Texture" id=26]
[ext_resource path="res://assets/ui/rpg/png/arrowBeige_left.png" type="Texture" id=27]
[ext_resource path="res://assets/ui/rpg/png/arrowBlue_left.png" type="Texture" id=28]
[ext_resource path="res://assets/ui/rpg/png/arrowBrown_right.png" type="Texture" id=29]
[ext_resource path="res://assets/ui/rpg/png/arrowBeige_right.png" type="Texture" id=30]
[ext_resource path="res://assets/ui/rpg/png/arrowBlue_right.png" type="Texture" id=31]
[ext_resource path="res://assets/creatures/player/Player.tscn" type="PackedScene" id=32]

[node name="CharacterGenerator" type="Spatial"]
script = ExtResource( 1 )
player_node = NodePath("Preview/Player")
hair_colors = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ]
hair_models = [ null, ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ]
beard_models = [ null, ExtResource( 10 ) ]
accessory_models = [ null, ExtResource( 11 ), ExtResource( 12 ) ]
face_textures = [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ]

[node name="Customizer" type="Control" parent="."]
margin_right = 286.0
margin_bottom = 600.0
theme = ExtResource( 23 )

[node name="Dialog" type="PanelContainer" parent="Customizer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 23 )

[node name="Panel" type="Panel" parent="Customizer/Dialog"]
margin_left = 10.0
margin_top = 10.0
margin_right = 276.0
margin_bottom = 590.0
theme = ExtResource( 23 )

[node name="MarginContainer" type="MarginContainer" parent="Customizer/Dialog/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 504.0
size_flags_vertical = 3

[node name="Settings" type="VBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 250.0
margin_bottom = 262.0
size_flags_horizontal = 3

[node name="Spacer2" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
margin_right = 250.0
margin_bottom = 14.0
size_flags_vertical = 0

[node name="Name" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Name"]
margin_top = 8.0
margin_right = 30.0
margin_bottom = 22.0
rect_min_size = Vector2( 30, 0 )

[node name="Input" type="LineEdit" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Name"]
margin_left = 34.0
margin_right = 216.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 23 )
text = "Player1"
align = 1
max_length = 12
context_menu_enabled = false

[node name="TextureButton" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Name"]
margin_left = 220.0
margin_right = 250.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
toggle_mode = true
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
expand = true
stretch_mode = 5

[node name="Label2" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
margin_top = 52.0
margin_right = 250.0
margin_bottom = 92.0
rect_min_size = Vector2( 30, 40 )

[node name="Haircolor" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
margin_top = 96.0
margin_right = 250.0
margin_bottom = 126.0
size_flags_horizontal = 3
alignment = 1

[node name="prev" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Haircolor"]
margin_left = 49.0
margin_right = 71.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 28 )
stretch_mode = 5

[node name="Label" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Haircolor"]
margin_left = 75.0
margin_top = 8.0
margin_right = 175.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 23 )
text = "Haarfarbe"
align = 1

[node name="next" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Haircolor"]
margin_left = 179.0
margin_right = 201.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 29 )
texture_disabled = ExtResource( 31 )
stretch_mode = 5

[node name="Hairstyle" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
margin_top = 130.0
margin_right = 250.0
margin_bottom = 160.0
size_flags_horizontal = 3
alignment = 1

[node name="Nav" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Hairstyle"]
margin_right = 250.0
margin_bottom = 30.0
size_flags_horizontal = 3
alignment = 1

[node name="prev" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Hairstyle/Nav"]
margin_left = 49.0
margin_right = 71.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 28 )
stretch_mode = 5

[node name="Label" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Hairstyle/Nav"]
margin_left = 75.0
margin_top = 8.0
margin_right = 175.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 23 )
text = "Frisur"
align = 1

[node name="next" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Hairstyle/Nav"]
margin_left = 179.0
margin_right = 201.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 29 )
texture_disabled = ExtResource( 31 )
stretch_mode = 5

[node name="Beard" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
margin_top = 164.0
margin_right = 250.0
margin_bottom = 194.0
size_flags_horizontal = 3
alignment = 1

[node name="prev" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Beard"]
margin_left = 49.0
margin_right = 71.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 28 )
stretch_mode = 5

[node name="Label" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Beard"]
margin_left = 75.0
margin_top = 8.0
margin_right = 175.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 23 )
text = "Bart"
align = 1

[node name="next" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Beard"]
margin_left = 179.0
margin_right = 201.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 29 )
texture_disabled = ExtResource( 31 )
stretch_mode = 5

[node name="Accessory" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
margin_top = 198.0
margin_right = 250.0
margin_bottom = 228.0
size_flags_horizontal = 3
alignment = 1

[node name="prev" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Accessory"]
margin_left = 49.0
margin_right = 71.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 28 )
stretch_mode = 5

[node name="Label" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Accessory"]
margin_left = 75.0
margin_top = 8.0
margin_right = 175.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 23 )
text = "Accessoir"
align = 1

[node name="next" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Accessory"]
margin_left = 179.0
margin_right = 201.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 29 )
texture_disabled = ExtResource( 31 )
stretch_mode = 5

[node name="Face" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
margin_top = 232.0
margin_right = 250.0
margin_bottom = 262.0
size_flags_horizontal = 3
alignment = 1

[node name="prev" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Face"]
margin_left = 49.0
margin_right = 71.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 28 )
stretch_mode = 5

[node name="Label" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Face"]
margin_left = 75.0
margin_top = 8.0
margin_right = 175.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 23 )
text = "Gesicht"
align = 1

[node name="next" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Face"]
margin_left = 179.0
margin_right = 201.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 29 )
texture_disabled = ExtResource( 31 )
stretch_mode = 5

[node name="Skincolor" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
visible = false
margin_top = 142.0
margin_right = 250.0
margin_bottom = 172.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Skincolor"]
margin_top = 8.0
margin_right = 66.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 2
theme = ExtResource( 23 )
text = "Hautfarbe:"
align = 1

[node name="TextureButton" type="ColorPickerButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Skincolor"]
margin_left = 158.0
margin_right = 218.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
size_flags_horizontal = 6
theme = ExtResource( 23 )
toggle_mode = true
flat = true
color = Color( 0.639216, 0.517647, 0.4, 1 )
edit_alpha = false

[node name="Cloths" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings"]
visible = false
margin_top = 176.0
margin_right = 250.0
margin_bottom = 206.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Cloths"]
margin_top = 8.0
margin_right = 59.0
margin_bottom = 22.0
size_flags_horizontal = 2
theme = ExtResource( 23 )
text = "Kleidung:"

[node name="Nav2" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Cloths"]
editor/display_folded = true
margin_left = 127.0
margin_right = 250.0
margin_bottom = 30.0
size_flags_horizontal = 3
alignment = 1

[node name="TextureButton" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Cloths/Nav2"]
margin_left = 18.0
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 6
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 28 )
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Cloths/Nav2"]
margin_left = 82.0
margin_right = 104.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 6
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 29 )
texture_disabled = ExtResource( 31 )
stretch_mode = 5

[node name="Spacer" type="Label" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer"]
margin_top = 508.0
margin_right = 250.0
margin_bottom = 522.0
size_flags_vertical = 0

[node name="MarginContainer" type="HBoxContainer" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 526.0
margin_right = 250.0
margin_bottom = 564.0
alignment = 1

[node name="Cancle" type="Button" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 108.0
margin_bottom = 38.0
size_flags_horizontal = 6
theme = ExtResource( 23 )
text = "Abbrechen"

[node name="Start" type="Button" parent="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 136.0
margin_right = 240.0
margin_bottom = 38.0
size_flags_horizontal = 6
theme = ExtResource( 23 )
text = "Spiel Starten"

[node name="MarginContainer" type="HBoxContainer" parent="Customizer"]
margin_left = 542.0
margin_top = 537.0
margin_right = 797.0
margin_bottom = 579.0
alignment = 1

[node name="RotateLeft" type="TextureButton" parent="Customizer/MarginContainer"]
margin_left = 42.0
margin_right = 82.0
margin_bottom = 42.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 6
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 28 )
expand = true
stretch_mode = 4

[node name="RotateRight" type="TextureButton" parent="Customizer/MarginContainer"]
margin_left = 172.0
margin_right = 212.0
margin_bottom = 42.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 6
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 29 )
texture_disabled = ExtResource( 31 )
expand = true
stretch_mode = 4

[node name="Preview" type="Spatial" parent="."]
editor/display_folded = true

[node name="Camera" type="Camera" parent="Preview"]
transform = Transform( 0.992114, 0.0416592, -0.118212, 0, 0.943147, 0.332375, 0.125338, -0.329754, 0.93571, -1.09578, 2.43164, 2.60048 )
current = true
fov = 53.1172

[node name="Player" parent="Preview" instance=ExtResource( 32 )]
transform = Transform( 0.692303, -2.05487e-08, 0.721607, -8.0907e-09, 1, 3.62385e-08, -0.721607, -3.09263e-08, 0.692303, 1.21334e-07, -7.17972e-09, -6.83799e-08 )
freeze = true

[node name="Camera" parent="Preview/Player/target" index="0"]
visible = false
current = false
script = null

[node name="Root" parent="Preview/Player" index="4"]
bones/18/bound_children = [ NodePath("HeadAttachment") ]

[node name="Equipment" parent="Preview/Player/Root/HeadAttachment" index="2"]
editor/display_folded = true
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Haircolor/prev" to="." method="_change_hair_color" binds= [ -1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Haircolor/next" to="." method="_change_hair_color" binds= [ 1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Hairstyle/Nav/prev" to="." method="_change_hair_model" binds= [ -1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Hairstyle/Nav/next" to="." method="_change_hair_model" binds= [ 1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Beard/prev" to="." method="_change_beard" binds= [ -1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Beard/next" to="." method="_change_beard" binds= [ 1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Accessory/prev" to="." method="_change_accessory" binds= [ -1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Accessory/next" to="." method="_change_accessory" binds= [ 1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Face/prev" to="." method="_change_face" binds= [ -1 ]]
[connection signal="pressed" from="Customizer/Dialog/Panel/MarginContainer/VBoxContainer/ScrollContainer/Settings/Face/next" to="." method="_change_face" binds= [ 1 ]]
[connection signal="pressed" from="Customizer/MarginContainer/RotateLeft" to="." method="_on_Rotate_pressed" binds= [ -1 ]]
[connection signal="pressed" from="Customizer/MarginContainer/RotateRight" to="." method="_on_Rotate_pressed" binds= [ 1 ]]

[editable path="Preview/Player"]
